[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "pycognito"
version = "2024.5.1"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Python class to integrate Boto3's Cognito client so it is easy to login users. With SRP support."
readme = "README.md"
authors = [{ name = "Pascal Vizeli", email = "pvizeli@syshack.ch" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
]
dependencies = [
    "boto3>=1.10.49",
    "envs>=1.3",
    "pyjwt[crypto]>=2.8.0",
    "requests>=2.22.0",
]

[project.optional-dependencies]
lint = [
    "black==24.4.2",
    "flake8==7.3.0",
    "pylint==3.1.1"
]
test = [
    "coverage==7.10.1",
    "pytest==8.4.1",
    "moto[cognitoidp]==5.1.9",
    "requests-mock==1.12.1",
    "freezegun==1.5.4"
]

[project.urls]
"Source code" = "https://github.com/pvizeli/pycognito"

[tool.setuptools.packages.find]
include = ["pycognito*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma=true
force_grid_wrap=0
line_length=88
indent = "    "
force_sort_within_sections = true
sections = [
    "FIRSTPARTY",
    "FUTURE",
    "INBETWEENS",
    "LOCALFOLDER",
    "STDLIB",
    "THIRDPARTY",
]
default_section = "THIRDPARTY"
forced_separate = "tests"
combine_as_imports = true
use_parentheses = true